--- a/app/src/main/res/layout/settings_items.xml
+++ b/app/src/main/res/layout/settings_items.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="110dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -10,28 +10,28 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:contentDescription="@null"
             android:id="@+id/settings_logo"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
-            android:src="@drawable/ic_profile_logo"
-            app:layout_constraintTop_toTopOf="@+id/settings_name"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="@dimen/_15sdp"
+            android:contentDescription="@null"
+            android:src="@drawable/ic_profile_logo"
             app:layout_constraintBottom_toBottomOf="@+id/settings_desc"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/settings_name" />
+
         <TextView
             android:id="@+id/settings_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_15sdp"
             android:layout_marginTop="@dimen/_8sdp"
-            android:text="@string/settings_name"
             android:fontFamily="@font/interregular"
+            android:text="@string/settings_name"
             android:textColor="@color/white"
             android:textSize="@dimen/_13ssp"
             app:layout_constraintStart_toEndOf="@+id/settings_logo"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/settings_desc"
@@ -39,22 +39,22 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_15sdp"
             android:layout_marginTop="@dimen/_5sdp"
-            android:text="@string/settings_desc"
             android:fontFamily="@font/interregular"
+            android:text="@string/settings_desc"
             android:textColor="@color/desc"
             android:textSize="@dimen/_10ssp"
             app:layout_constraintStart_toEndOf="@+id/settings_logo"
-            app:layout_constraintTop_toBottomOf="@+id/settings_name"/>
+            app:layout_constraintTop_toBottomOf="@+id/settings_name" />
 
         <ImageView
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
-            android:src="@drawable/ic_arrow_right"
-            app:layout_constraintStart_toEndOf="@id/settings_desc"
             android:layout_marginStart="@dimen/_50sdp"
-            app:layout_constraintTop_toTopOf="@+id/settings_desc"
+            android:contentDescription="@string/right_arrow"
+            android:src="@drawable/ic_arrow_right"
             app:layout_constraintBottom_toBottomOf="@+id/settings_desc"
-            android:contentDescription="@string/right_arrow" />
+            app:layout_constraintStart_toEndOf="@id/settings_desc"
+            app:layout_constraintTop_toTopOf="@+id/settings_desc" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
