--- a/app/src/main/res/layout/fragment_enter_otp.xml
+++ b/app/src/main/res/layout/fragment_enter_otp.xml
@@ -62,7 +62,7 @@
             android:id="@+id/otpCode1"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="80dp"
+            android:layout_height="60dp"
             android:background="@drawable/edittext_bg"
             android:fontFamily="@font/interregular"
             android:textColor="@color/white"
@@ -77,7 +77,7 @@
             android:id="@+id/otpCode2"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="80dp"
+            android:layout_height="60dp"
             android:layout_marginStart="10dp"
             android:background="@drawable/edittext_bg"
             android:fontFamily="@font/interregular"
@@ -93,7 +93,7 @@
             android:id="@+id/otpCode3"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="80dp"
+            android:layout_height="60dp"
             android:layout_marginStart="10dp"
             android:background="@drawable/edittext_bg"
             android:fontFamily="@font/interregular"
@@ -109,7 +109,7 @@
             android:id="@+id/otpCode4"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="80dp"
+            android:layout_height="60dp"
             android:layout_marginStart="10dp"
             android:background="@drawable/edittext_bg"
             android:fontFamily="@font/interregular"
@@ -124,7 +124,7 @@
             android:id="@+id/otpCode5"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="80dp"
+            android:layout_height="60dp"
             android:layout_marginStart="10dp"
             android:background="@drawable/edittext_bg"
             android:fontFamily="@font/interregular"
@@ -140,7 +140,7 @@
             android:id="@+id/otpCode6"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="80dp"
+            android:layout_height="60dp"
             android:layout_marginStart="10dp"
             android:background="@drawable/edittext_bg"
             android:fontFamily="@font/interregular"
@@ -153,15 +153,35 @@
             android:imeOptions="actionNext"/>
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Resend OTP in 0:55"
-        android:fontFamily="@font/interregular"
-        android:textSize="12sp"
-        android:textColor="@color/white"
-        android:gravity="center"/>
+        android:orientation="horizontal"
+        android:layout_marginStart="@dimen/_110sdp">
+
+        <TextView
+            android:id="@+id/tv_resend_otp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/interregular"
+            android:gravity="center"
+            android:text="Resend OTP in "
+            android:textColor="@color/white"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/tv_timer"
+            android:layout_marginTop="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="0:55"
+            android:textSize="12sp"
+            android:gravity="center"
+            android:fontFamily="@font/interregular"/>
+
+    </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/verifyBtn"
