--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <base-config cleartextTrafficPermitted="false">
+    <base-config>
         <trust-anchors>
-            <certificates src="system" />
+            <certificates src="@raw/self_signed_certificate" />
         </trust-anchors>
     </base-config>
-    <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">firebase-settings.crashlytics.com</domain>
-    </domain-config>
 </network-security-config>
